# core

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
scrapers/commission-meetings/: Cargo.toml
scrapers/commission-meetings/src/: main.rs
scrapers/commissions/: Cargo.toml
scrapers/commissions/src/: main.rs
scrapers/crawl/: Cargo.toml
scrapers/crawl/src/: lib.rs  paths.rs  utils.rs
scrapers/crawl/src/client/: mod.rs
scrapers/dossiers/: Cargo.toml
scrapers/dossiers/src/: main.rs
scrapers/lobby/: Cargo.toml
scrapers/lobby/src/: main.rs
scrapers/members/: Cargo.toml
scrapers/members/src/: main.rs
scrapers/plenary-meetings/: Cargo.toml
scrapers/plenary-meetings/src/: main.rs
scrapers/remunerations/: Cargo.toml
scrapers/remunerations/src/: main.rs
scrapers/sessions/: Cargo.toml
scrapers/sessions/src/: main.rs
summarizers/: README.md
summarizers/dossier-pdf-to-markdown/: main.py
summarizers/dossier-summarizer/: Cargo.toml
summarizers/dossier-summarizer/src/: main.rs
summarizers/text-summarizer/: Cargo.toml
summarizers/text-summarizer/src/: main.rs
